--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -157,7 +157,7 @@ pre code {
   background: none;
 }
 .header .main-nav .nav .nav-item a {
-  color: #e6141d;
+  color: #fff;
   -webkit-transition: none;
   -moz-transition: none;
   -ms-transition: none;
@@ -186,7 +186,7 @@ pre code {
 /* ======= Promo Section ======= */
 
 .promo {
-  background: url(../images/bg-image-latest.png) transparent;
+  background: url(../images/bg-image.png) transparent;
   background-size: cover;
   padding-top: 110px;
   height: 33em;
@@ -275,17 +275,28 @@ pre code {
   /*padding: 80px 0;*/
   background: #BA1119;
   color: #fff;
+  min-height: 580px;
+}
+.courses .row {
+  min-height: 500px;
+  width: 100%;
+  margin: 0;
+  padding-bottom: 20px;
 }
 .courses #android-course {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
+  min-height: 400px;
   position: relative;
 }
 .courses #frontend-course {
-  /*margin: 50px 0;*/
+  margin: 50px 0 0 0;
+  min-height: 400px;
   position: relative;
 }
 .courses #ruby-course {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
+  min-height: 400px;
+  position: relative;
 }
 .courses h1.title {
   color: #fff;
@@ -299,7 +310,7 @@ pre code {
   margin-bottom: 15px;
 }
 .courses a {
-  color: #000000;
+  color: #fff;
 }
 .courses a:hover {
   color: #042a36;
@@ -308,21 +319,13 @@ pre code {
   margin-bottom: 10px;
   color: #9e9e9e;
 }
-.courses .feature-list li .fa {
-  margin-right: 5px;
-  color: #fff;
-}
-.courses .row {
-  width: 100%;
-  margin: 0;
-}
 .courses .read-more {
   margin-top: 25px;
-  color: #fff !important;
+  color: #000000 !important;
 }
-.courses #frontend-course .btn {
-  position: absolute;
-  top: auto;
+.courses .btn {
+  position: relative;
+  top: 50px;
 }
 
 /* ======= Team Section ======= */
@@ -335,10 +338,15 @@ pre code {
   margin-top: 0;
   margin-bottom: 60px;
 }
+.team .join-us h3{
+  text-align: center;
+  color: #074f66;
+}
 .team .author-message-right  {
   position: relative;
   margin-bottom: 60px;
   text-align: center;
+  padding: 0 10px;
 }
 .team .author-message-right .speech-bubble {
   background: #BA1119;
@@ -353,6 +361,7 @@ pre code {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   position: relative;
+  min-height: 358px;
 }
 .team .author-message-right .speech-bubble .title {
   color: #fff;
@@ -385,6 +394,7 @@ pre code {
   position: relative;
   margin-bottom: 60px;
   text-align: center;
+  padding: 0 10px;
 }
 .team .author-message-left .speech-bubble {
   background: #042a36;
@@ -399,6 +409,7 @@ pre code {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   position: relative;
+  min-height: 358px;
 }
 .team .author-message-left .speech-bubble .title {
   color: #fff;
@@ -501,15 +512,24 @@ pre code {
 /* ======= Footer ======= */
 
 .footer {
+  margin: 0;
   padding: 15px 0;
   background: #042a36;
   color: #fff;
+}
+.footer .madewith {
+  -webkit-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  text-align: center;
 }
 .footer .copyright {
   -webkit-opacity: 0.8;
   -moz-opacity: 0.8;
   opacity: 0.8;
+  text-align: center;
 }
+
 .footer .fa-heart {
   color: #fb866a;
 }
