added a few style changes and typeform for first course test

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -297,7 +297,7 @@ pre code {
 }
 .courses .feature-list li {
   margin-bottom: 10px;
-  color: #9e9e9e;
+  color: #d6d6d6;
 }
 .courses .read-more {
   margin-top: 25px;
