linked buttons to typeform

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,7 @@ a:hover {
   text-decoration: underline;
   color: #0e98c5;
 }
-.btn, a.btn {
+.btn, a.btn,  {
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
@@ -32,7 +32,7 @@ a:hover {
   padding: 8px 16px;
   font-weight: bold;
 }
-.btn .fa, a.btn .fa {
+.btn .fa, a.btn .fa, {
   margin-right: 5px;
 }
 .btn:focus, a.btn:focus {
