--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -335,6 +335,28 @@ a.btn-cta-secondary:hover, .btn-cta-secondary:hover {
   text-transform: uppercase;
 }
 
+/* ======= Testimonial Section ======= */
+.testimonials {
+  padding: 40px 0 0 0;
+  background: #f5f5f5;
+}
+.testimonials .title {
+  text-align: center;
+  color: #074f66;
+}
+.testimonials #student-testimonials .item{
+  background: #0c86ae;
+  padding: 30px 0px;
+  margin: 5px;
+  color: #FFF;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  text-align: center;
+  height: 150px;
+}
+
+
 /* ======= Team Section ======= */
 
 .team {
