added new years pricing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -316,7 +316,7 @@ a.btn-cta-secondary:hover, .btn-cta-secondary:hover {
   padding: 10px;
   margin-top: 10px;
 }
-.courses .christmas-offer {
+.courses .offer {
   text-decoration: line-through;
 }
 .courses .course-details {
