Added goldsmiths uni template - to be used for new website

--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -20,7 +20,7 @@
         .boxed {
           border-color: #ccc;
           &:hover {
-            border-color: @color-pink;
+            border-color: @color-blue;
           }
         }
       }
@@ -91,7 +91,7 @@
 }
 
 .cta-lottery {
-  background: @color-purple;
+  background: @color-grey;
   font-size: 1.25em;
 }
 
@@ -136,7 +136,7 @@ a.disabled {
 }
 
 [data-overlay]:before{
-    background: @color-purple;
+    background: @color-grey;
 }
 
 .team {
