--- a/assets/less/theme-variables.less
+++ b/assets/less/theme-variables.less
@@ -4,12 +4,12 @@
 
 //////// Colours
 
-@color-purple: #633B93;
-@color-pink: #C52085;
+@color-grey: grey;
+@color-blue: #005290;
 
 @color-bg-site: #FFFFFF;
-@color-primary: @color-pink;
-@color-primary-1: darken(@color-pink, 10%);
+@color-primary: @color-blue;
+@color-primary-1: darken(@color-blue, 10%);
 @color-primary-2: #465773;
 @color-primary-3: #4A90E2;
 @color-dark: #252525;
