--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-7"> <span class="type--fine-print"><span class="update-year"></span> {{site.name}}.</span> <a class="type--fine-print" href="https://www.goldsmithssu.org">Goldsmiths SU</a> <a class="type--fine-print" href="http://www.gold.ac.uk/computing/">Department of Computing at Goldsmiths</a> </div>
-            <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="mailto:hacksmiths@gold.ac.uk">hacksmiths@gold.ac.uk</a> </div>
+            <div class="col-sm-7"> <span class="type--fine-print"><span class="update-year"></span> {{site.name}}.</span> <a class="type--fine-print" href="https://www.goldsmithssu.org">WarwickTECH</a> <a class="type--fine-print" href="http://www.gold.ac.uk/computing/">University of Warwick</a> </div>
+            <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="mailto:hacksmiths@gold.ac.uk">info@warwick.tech</a> </div>
         </div>
     </div>
 </footer>
