--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,9 @@
                     <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
                         <div class="bar__module">
                             <ul class="menu-horizontal text-left">
-                                <li><a href="/team">Team</a></li>
                                 <li><a href="/about">About</a></li>
-                                <li><a href="/hardware">Hardware</a></li>
+                                <li><a href="/team">Team</a></li>
+                                <li><a href="/hardware">Courses</a></li>
                                 <li><a href="https://medium.com/hacksmiths" target="_blank">Blog</a></li>
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
