--- a/_includes/join.html
+++ b/_includes/join.html
@@ -4,7 +4,7 @@
             <div class="col-sm-8 col-md-6">
                 <div class="cta">
                     <a class="btn btn--primary btn--lg type--uppercase" href="/join" id="submitButton"> <span class="btn__text">Join for free</span></a>
-                    <p class="lead">Becoming a member as a Goldsmiths student not only gives you access to all of our events, but also gives you the ability to have a say and vote in our annual general meeting.</p>
+                    <p class="lead">Becoming a member of Warwick Coding not only gives you access to all of our events, but also gives you the access to a range of internship and graduate opportunities.</p>
                     <p class="type--fine-print">Have questions? <a href="/contact">Get in touch</a></p>
                 </div>
             </div>
